--- a/.gitconfig
+++ b/.gitconfig
@@ -23,7 +23,7 @@
   pullff = pull --ff-only
   noff = merge --no-ff
   fa = fetch --all
-  b = branch
+  b = branch -lvv
   ds = diff --stat=160,120
   dh1 = diff HEAD~1
 
