hub pull-request alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,7 @@
   unassumeall = "!git assumed | xargs git update-index --no-assume-unchanged"
   assumeall = "!git st -s | awk {'print $2'} | xargs git assume"
 
-  pr = compare
+  pr = pull-request -o
   prune-local = "!git branch --merged | grep -v \"\\*\\|master\" | xargs -n 1 git branch -d && echo \"Merged branches pruned.\""
   prune-remote = "!git fetch --prune"
   prune-gone = "!git checkout master && git branch -lvv | grep \"gone\\]\" | sed -e 's/^ *//' | cut -d ' ' -f 1 | while read branch; do git branch -D $branch; done"
