--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
   pager = less -F -X
 
 [alias]
-  l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset' --abbrev-commit
   lb = !git l origin/master..$(git symbolic-ref --short HEAD)
   la = !git l --all
   r = !git l -12
@@ -94,10 +94,10 @@
   whitespace = red reverse
 
 [color "diff-highlight"]
-  oldNormal = red bold
-  oldHighlight = red bold 52
-  newNormal = green bold
-  newHighlight = green bold 22
+  oldNormal = red
+  oldHighlight = red 52
+  newNormal = green
+  newHighlight = green 22
 
 [interactive]
   diffFilter = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight
