--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/bundle/vim-airline"]
 	path = .vim/bundle/vim-airline
 	url = https://github.com/vim-airline/vim-airline
+[submodule ".vim/bundle/golden-ratio"]
+	path = .vim/bundle/golden-ratio
+	url = git@github.com:roman/golden-ratio.git
