--- a/.screenrc
+++ b/.screenrc
@@ -1,2 +1,7 @@
 # hardstatus on
-# caption always "%3n %t"
+# hardstatus alwayslastline
+# hardstatus string '%{= Kd} %-= %{= Kd}%-w%{= Kr}[%{= Kd}%n %t%{= Kr}]%{= Kd}%+w'
+# startup_message off
+
+termcapinfo xterm* ti@:te@ # mouse support
+
