--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/bundle/emmet-vim"]
 	path = .vim/bundle/emmet-vim
 	url = https://github.com/mattn/emmet-vim.git
+[submodule ".vim/bundle/vim-searchindex"]
+	path = .vim/bundle/vim-searchindex
+	url = https://github.com/google/vim-searchindex.git
