--- a/.gitconfig
+++ b/.gitconfig
@@ -22,7 +22,8 @@
   ra = !git r --all # Log recent commits from all refs.
 
   # Create a simple change log for copy/pasting into PRs.
-  changelog = "!git log --pretty=\"* %h %s\" --reverse origin/master..HEAD"
+  changelog = "!git log --pretty=\"* %h %s\" --reverse"
+  changelog-branch = !git changelog origin/master..HEAD
 
 
   ###############################################
