commit signature shows in log

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
   ###############################################
 
   # Pretty logging.
-  l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset' --abbrev-commit
+  l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset %C(black)✍ %G?%Creset' --abbrev-commit
 
   lb = !git l origin/master..$(git symbolic-ref --short HEAD) # Log commits that diverge from origin/master.
   la = !git l --all # Log with all refs.
