--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 setw -g mouse on
 
-bind -t vi-copy y copy-pipe 'pbcopy'
-bind -t vi-copy v begin-selection
+#  bind -t vi-copy y copy-pipe 'pbcopy'
+#  bind -t vi-copy v begin-selection
 
