replace ag with ripgrep

--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -19,9 +19,9 @@ brew 'perl'
 brew 'pstree'
 brew 'python'
 brew 'python3'
+brew 'ripgrep'
 brew 'ruby'
 brew 'stow'
-brew 'the_silver_searcher'
 brew 'tmux'
 brew 'tree'
 brew 'vim'
