--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,7 +22,7 @@
   ra = !git r --all # Log recent commits from all refs.
 
   # Create a simple change log for copy/pasting into PRs.
-  changelog = "!git log --pretty=\"* %h %s\" --reverse"
+  changelog = "!git log --pretty=\"* %h %ad %s\" --date=short"
   changelog-branch = !git changelog origin/master..HEAD
 
 
