changelog since last tag command

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,6 +23,7 @@
 
   # Create a simple change log for copy/pasting into PRs.
   changelog = "!git log --pretty=\"* %h %ad %s\" --date=short"
+  changelog-tag = "!git changelog $(git latest-tag-version)..origin/master"
   changelog-branch = !git changelog origin/master..HEAD
 
 
