--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,6 +17,7 @@
   l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset %C(black)✍ %G?%Creset' --abbrev-commit
 
   lb = !git l origin/master..$(git symbolic-ref --short HEAD) # Log commits that diverge from origin/master.
+  lt = !git l $(git latest-tag-version)..HEAD
   la = !git l --all # Log with all refs.
   r = !git l -12 # Log recent commits.
   ra = !git r --all # Log recent commits from all refs.
