update Brewfile and add update-brewfile script

--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -1,29 +1,44 @@
 brew 'autojump'
 brew 'aws-shell'
-brew 'cmake'
-brew 'curl'
+brew 'homebrew/php/composer'
 brew 'coreutils'
+brew 'cscope'
+brew 'curl'
 brew 'dirmngr'
 brew 'dnsmasq'
 brew 'docker-machine-nfs'
 brew 'fswatch'
+brew 'git'
+brew 'git-quick-stats'
 brew 'gnu-time'
 brew 'gnupg'
 brew 'gpg-agent'
 brew 'httpie'
+brew 'hub'
+brew 'hugo'
 brew 'imagemagick'
+brew 'jemalloc'
+brew 'jq'
+brew 'libtermkey'
 brew 'libusb-compat'
+brew 'libuv'
+brew 'libvterm'
 brew 'mobile-shell'
 brew 'mongodb'
+brew 'msgpack'
 brew 'perl'
+brew 'homebrew/php/php56'
 brew 'pstree'
 brew 'python'
 brew 'python3'
 brew 'ripgrep'
 brew 'ruby'
 brew 'stow'
+brew 'terminal-notifier'
+brew 'the_silver_searcher'
 brew 'tmux'
 brew 'tree'
+brew 'unibilium'
 brew 'vim'
 brew 'wget'
 brew 'yarn'
