replace cheat with tdlr

--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -1,6 +1,5 @@
 brew 'autojump'
 brew 'aws-shell'
-brew 'cheat'
 brew 'homebrew/php/composer'
 brew 'coreutils'
 brew 'cscope'
@@ -37,6 +36,7 @@ brew 'ruby'
 brew 'stow'
 brew 'terminal-notifier'
 brew 'the_silver_searcher'
+brew 'tldr'
 brew 'tmux'
 brew 'tree'
 brew 'unibilium'
