--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -8,6 +8,7 @@ brew 'dirmngr'
 brew 'dnsmasq'
 brew 'docker-machine-nfs'
 brew 'fswatch'
+brew 'fzf'
 brew 'git'
 brew 'git-quick-stats'
 brew 'gnu-time'
