--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,7 @@
   path = ~/.gitconfig.local
 
 [core]
-  excludesfile = ~/.gitignore
+  excludesfile = ~/.gitignore_global
 
   # Use less when output is longer than screen. Also leave result on screen after exiting less.
   pager = less -F -X
