use gnu utils by default

--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -7,13 +7,18 @@ brew 'curl'
 brew 'dirmngr'
 brew 'dnsmasq'
 brew 'docker-machine-nfs'
+brew 'findutils'
 brew 'fswatch'
 brew 'fzf'
+brew 'gawk'
 brew 'git'
 brew 'git-quick-stats'
+brew 'gnu-sed'
+brew 'gnu-tar'
 brew 'gnu-time'
 brew 'gnupg'
 brew 'gpg-agent'
+brew 'grep'
 brew 'httpie'
 brew 'hub'
 brew 'hugo'
