--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -80,7 +80,7 @@
   test-branch="!run-command-on-git-revisions origin/master $(git symbolic-ref --short HEAD) 'yarn test'"
 
   # Fast-forward merge commits of current branch into master and push. Tidy after.
-  finish-branch="!f() { local branch=$(git symbolic-ref --short HEAD); git co master && git fa && git ff $branch && git push && git tidy; }; f"
+  finish-branch="!git-finish-branch"
 
 
   ###############################################
