tmux theme and config improvements

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,1 +1,17 @@
+
+# theme generated with edkolev/tmuxline.vim
+source-file ~/.tmux/lightlight.tmux-theme
+
+# Define default shell
+set-option -g default-command "reattach-to-user-namespace -l $(which zsh)"
+
+# turn on mouse interactions
 setw -g mouse on
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# prevent windows being automatically renamed
+set-option -g allow-rename off
+
+set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
