--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,13 +5,39 @@ source-file ~/.tmux/lightlight.tmux-theme
 # Define default shell
 set-option -g default-command "reattach-to-user-namespace -l $(which zsh)"
 
+# set $TERM type
+set -g default-terminal "xterm-256color"
+
 # turn on mouse interactions
 setw -g mouse on
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# set scrollback history to 10000 (10k)
+set -g history-limit 10000
+
+# shorten command delay
+set -sg escape-time 1
+
 # prevent windows being automatically renamed
 set-option -g allow-rename off
 
+# fix cursor shape for zsh vi mode
 set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
+
+# set window and pane index to 1 (0 by default)
+set-option -g base-index 1
+setw -g pane-base-index 1
+
+# reload ~/.tmux.conf using PREFIX r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Make the current window the first window
+bind T swap-window -t 1
+
+# map Vi movement keys as pane movement keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
