--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -1,3 +1,4 @@
+brew 'arp-scan'
 brew 'autojump'
 brew 'awscli'
 brew 'homebrew/php/composer'
@@ -21,6 +22,8 @@ brew 'gpg-agent'
 brew 'grep'
 brew 'htop'
 brew 'httpie'
+brew 'httping'
+brew 'httpstat'
 brew 'hub'
 brew 'hugo'
 brew 'imagemagick'
@@ -30,16 +33,20 @@ brew 'libtermkey'
 brew 'libusb-compat'
 brew 'libuv'
 brew 'libvterm'
+brew 'lnav'
 brew 'mobile-shell'
 brew 'mongodb'
 brew 'msgpack'
+brew 'node'
 brew 'perl'
 brew 'homebrew/php/php56'
 brew 'pstree'
 brew 'python'
 brew 'python3'
+brew 'reattach-to-user-namespace'
 brew 'ripgrep'
 brew 'ruby'
+brew 'shellcheck'
 brew 'stow'
 brew 'terminal-notifier'
 brew 'the_silver_searcher'
@@ -48,6 +55,7 @@ brew 'tmux'
 brew 'tree'
 brew 'unibilium'
 brew 'vim'
+brew 'watch'
 brew 'wget'
 brew 'yarn'
 brew 'zsh'
