--- a/_homebrew/Brewfile
+++ b/_homebrew/Brewfile
@@ -1,6 +1,7 @@
 brew 'arp-scan'
 brew 'autojump'
 brew 'awscli'
+brew 'bash'
 brew 'homebrew/php/composer'
 brew 'coreutils'
 brew 'cscope'
@@ -20,6 +21,7 @@ brew 'gnu-time'
 brew 'gnupg'
 brew 'gpg-agent'
 brew 'grep'
+brew 'groovy'
 brew 'htop'
 brew 'httpie'
 brew 'httping'
@@ -27,6 +29,7 @@ brew 'httpstat'
 brew 'hub'
 brew 'hugo'
 brew 'imagemagick'
+brew 'irssi'
 brew 'jemalloc'
 brew 'jq'
 brew 'libtermkey'
@@ -37,7 +40,6 @@ brew 'lnav'
 brew 'mobile-shell'
 brew 'mongodb'
 brew 'msgpack'
-brew 'node'
 brew 'perl'
 brew 'homebrew/php/php56'
 brew 'pstree'
@@ -45,6 +47,7 @@ brew 'python'
 brew 'python3'
 brew 'reattach-to-user-namespace'
 brew 'ripgrep'
+brew 'rsync'
 brew 'ruby'
 brew 'shellcheck'
 brew 'stow'
@@ -56,6 +59,7 @@ brew 'tree'
 brew 'unibilium'
 brew 'vim'
 brew 'watch'
+brew 'watchman'
 brew 'wget'
 brew 'yarn'
 brew 'zsh'
