use bash in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@
 source-file ~/.tmux/lightlight.tmux-theme
 
 # Define default shell
-set-option -g default-command "reattach-to-user-namespace -l $(which zsh)"
+set-option -g default-command "reattach-to-user-namespace -l $(which bash)"
 
 # set $TERM type
 set -g default-terminal "xterm-256color"
