--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -156,7 +156,7 @@
   gpgsign = true # sign all commits using gpg key in .gitconfig.local
 
 [gpg]
-  program = gpg2
+  program = gpg
 
 [tag]
   sort = -*authordate
