use local tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,7 @@
 
 # theme generated with edkolev/tmuxline.vim
 source-file ~/.tmux/lightlight.tmux-theme
-
-# Define default shell
-set-option -g default-command "reattach-to-user-namespace -l $(which bash)"
+source-file ~/.tmux.conf.local
 
 # set $TERM type
 set -g default-terminal "xterm-256color"
