--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set -sg escape-time 1
 set-option -g allow-rename off
 
 # fix cursor shape for zsh vi mode
-set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
+# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
 
 # set window and pane index to 1 (0 by default)
 set-option -g base-index 1
