--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -1,6 +1,11 @@
 
+set editing-mode vi
 set show-mode-in-prompt on
-set vi-cmd-mode-string "\1\e[2 q\2"
-set vi-ins-mode-string "\1\e[6 q\2"
+set vi-ins-mode-string \1\e[6 q\2
+set vi-cmd-mode-string \1\e[2 q\2
+set keymap vi-insert
+  RETURN: "\e\n"
 
 C-L: clear-screen
+C-p: history-search-backward
+C-n: history-search-forward
