use hi@pietvanzoen.com for committer email

--- a/git/.gitconfig.local.example
+++ b/git/.gitconfig.local.example
@@ -1,6 +1,6 @@
 [user]
   name = pietvanzoen
-  email = [REDACTED]
+  email = hi@pietvanzoen.com
   username = pietvanzoen
 #  signingkey = [REDACTED]
 
