--- a/gnupg/.gnupg/gpg.conf
+++ b/gnupg/.gnupg/gpg.conf
@@ -1,4 +1,4 @@
-default-key 0x177B60BC962C6864
+default-key 119BA45BFDF0E612
 
 # Behavior
 no-comments
@@ -21,3 +21,5 @@ list-options show-uid-validity
 verify-options show-uid-validity
 
 use-agent
+
+pinentry-mode loopback
