--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -108,6 +108,7 @@
   assumed = "!git ls-files -v | grep ^h | cut -c 3-"
   unassumeall = "!git assumed | xargs git update-index --no-assume-unchanged"
   assumeall = "!git st -s | awk {'print $2'} | xargs git assume"
+  ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 
 [merge]
   summary = true # Always include a summary in merge commits.
