--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,6 +1,6 @@
-# [include]
-#   # Import environment specific config and sensitive data.
-#   path = ~/.gitconfig.local
+[include]
+  # Import environment specific config and sensitive data.
+  path = ~/.config/git/config.local
 
 [user]
   name = pietvanzoen
