use space in copymode to copy to system clipboard

--- a/bash/.screenrc
+++ b/bash/.screenrc
@@ -4,3 +4,5 @@
 startup_message off
 
 termcapinfo xterm* ti@:te@ # mouse support
+
+bindkey -m ' ' eval 'stuff \040' 'writebuf' 'exec sh -c "/usr/bin/pbcopy < /tmp/screen-exchange"'
