disable vi-mode in prompt

--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -1,8 +1,8 @@
 
 set editing-mode vi
-set show-mode-in-prompt on
-set vi-ins-mode-string \1\e[6 q\2
-set vi-cmd-mode-string \1\e[2 q\2
+# set show-mode-in-prompt on
+# set vi-ins-mode-string \1\e[6 q\2
+# set vi-cmd-mode-string \1\e[2 q\2
 
 C-L: clear-screen
 C-p: history-search-backward
