--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -33,12 +33,14 @@
 
   # Pretty logging.
   l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset %C(cyan)$%G?%Creset' --abbrev-commit
+  ln = l --no-merges
 
   lb = !git l origin/master..$(git symbolic-ref --short HEAD) # Log commits that diverge from origin/master.
   lt = !git l $(git latest-tag-version)..HEAD
   la = !git l --all # Log with all refs.
   r = !git l -12 # Log recent commits.
   ra = !git r --all # Log recent commits from all refs.
+  rn = r --no-merges
 
   # Create a simple change log for copy/pasting into PRs.
   changelog = "!git log --pretty=\"* %ad - %s [%h]\" --date=short"
