--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -79,8 +79,7 @@
   # Create pull request and open url: https://hub.github.com/
   review = "!git push -u && hub pull-request -o"
 
-  # Fetch and update given branch name, then rebase current branch onto that branch.
-  fetch-rebase = "!f() { if [[ -z \"$1\" ]]; then echo 'No branch name given.' && exit 1; else git fetch origin $1:$1 && git rebase $1; fi }; f"
+  fr = fetch-rebase
   frm = !git fetch-rebase master
   diff-commits = "!git fetch origin master:master && git l master --not $(git symbolic-ref --short HEAD)"
 
