--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,3 +33,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Make the current window the first window
 bind T swap-window -t 1
+
+# easier pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
