--- a/_macos/Brewfile
+++ b/_macos/Brewfile
@@ -24,6 +24,7 @@ brew 'reattach-to-user-namespace'
 brew 'rename'
 brew 'ripgrep'
 brew 'rsync'
+brew 'speedtest-cli'
 brew 'stow'
 brew 'terminal-notifier'
 brew 'tmux'
