--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -10,7 +10,6 @@ brew 'fd'
 brew 'fzf'
 brew 'git'
 brew 'gnupg'
-brew 'grep'
 brew 'htop'
 brew 'httpie'
 brew 'httpstat'
@@ -45,6 +44,7 @@ brew 'gnu-sed', args: ['with-default-names']
 brew 'gnu-tar', args: ['with-default-names']
 brew 'gnu-time', args: ['with-default-names']
 brew 'gnutls', args: ['with-default-names']
+brew 'grep', args: ['with-default-names']
 
 cask_args appdir: "/Applications"
 cask '1password'
