install cask gitter

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -56,6 +56,7 @@ cask 'dropbox'
 cask 'fantastical'
 cask 'firefox'
 cask 'flux'
+cask 'gitter'
 cask 'google-chrome'
 cask 'homebrew/cask-fonts/font-inconsolata'
 cask 'istat-menus'
