--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -6,6 +6,7 @@ brew 'curl'
 brew 'docker-completion'
 brew 'docker-compose-completion'
 brew 'docker-machine-completion'
+brew 'exa'
 brew 'fd'
 brew 'fzf'
 brew 'git'
